adding ref to keystone sp

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -296,7 +296,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     %[ADD You could note that no comparison with standard approaches is possible because existing methods don't allow for calculation of self regulation.  You send it before but maybe drive that novelty home. ] 
 
     \subsubsection*{Which species may be taking on keystone roles in the system?}
-    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation \parencite{}, we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
+    Keystone species have strong effects on the dynamics of the whole ecosystem, such that their exclusion from a community can create significant changes in species density and composition \parencite{Paine1969}. Furthermore, the impact of keystone species on other species is disproportionately large relative to their abundance \parencite{Power1996, Piraino2002, Libralato2006}. The keystone species concept is  relevant to ecosystem management and conservation in helping identify species of particular importance for the safeguarding of a whole system \parencite{Soule2005a}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g. \cite{Paine1992}), we can identify potential candidates by comparing a species' impact on the population growth of other species to it's own abundance \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from it's response or sensitivity to neighbours. Figure \ref{fig:species}.B highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). Plotting species spatial association strengths against their log abundance, however, does not return the same insights (Figure \ref{fig:coocab}).
     
 
     \subsubsection*{Do all exotic species compete with native species?}
