typos and commenting out extra paragraph in Discussion

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -372,10 +372,10 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 
         
         \paragraph{}
-        Our novel framework includes a versatile approach for estimating interactions between system elements which are not observed to cooccur. Care should be taken, however, that these unrealised interactions do not dominate resulting networks. The method we propose uses observed interactions to estimate unobserved interactions. This method thus works better the more observed interactions available and is thus not ideal for small or heavily fragmented datasets. It is also important to consider the likely reasons for missing interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
+        Our novel framework includes a versatile approach for estimating interactions between system elements which are not observed to cooccur. Care should be taken, however, that these unrealised interactions do not dominate resulting networks. The method we propose uses realised interactions to estimate unrealised interactions. This method thus works better the more realised interactions available and is thus not ideal for small or heavily fragmented datasets. It is also important to consider the likely reasons for unrealised interactions. Forbidden links are a subset of potential interactions which cannot be observed, often due to physical constraints (e.g. biological mismatch) or spatio-temporal uncoupling. For example, a pair of short-lived annual plants might have such opposing phenologies that their growing seasons never overlap in the field. We direct the reader towards the literature on forbidden interactions \parencite{Olesen2011, Jordano2016} for solving these cases. 
 
-        \paragraph{}
-        Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Higher-order interactions may also...
+        %\paragraph{}
+        %Our framework assumes that though the total effect of one element on another increases with density, this relationship is linear. This may not always be the case however, as interactions may be invariant to density \parencite{} or scale non-linearly \parencite{}. Our framework also evaluates direct interactions only, and does not consider higher-order interactions \parencite{}. 
 
         \paragraph{}
         Our model framework is aimed to helping empiricists who would like to estimate species interactions in non-trophic communities. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain convergence and model behaviour to verify that the full parameter space is sampled. The amount of data required for sampling diverse communities may still be substantial. Grouping species which appear very rarely is also a common strategy to avoid over-parameterisation. In our case study, neighbour species which were recorded fewer than 10 times across all observations were grouped into an 'other' category with its own interaction effect. If interactions with or between very rare species are the explicit object of a study, however, data-collection should focus on amassing observations of focal individuals from those rarer species to be able to estimate  interaction strengths.   
