added word count to first page

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -63,9 +63,9 @@ Manuscript submitted for consideration as a \textbf{Method} article.
 
 \noindent
 Number of words - Abstract: 144\\
-Number of words - main text: \\
-Figures \&  Table in main text.\\
-Number of references: XX\\
+Number of words - main text: 4895\\
+4 Figures in main text.\\
+Number of references: 81\\
 
 \noindent
 \textbf{Keywords:} Species interactions, competition, facilitation, networks, population dynamics, non-trophic, ....  
