updated exotic section and word count - send to Daniel!

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -63,7 +63,11 @@ Manuscript submitted for consideration as a \textbf{Method} article.
 
 \noindent
 Number of words - Abstract: 144\\
-Number of words - main text: 4895\\
+Number of words - main text: 4904\\
+% intro 698
+% methods 1808
+% results 1041
+% discussion 1357
 4 Figures in main text.\\
 Number of references: 81\\
 
@@ -299,7 +303,9 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
     
 
     \subsubsection*{Do all exotic species compete with native species?}
-    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system, regardless of whether they are native or exotic. In this instance, \textit{P. aroides} is an exotic species that facilitates some native species.
+    Though many invasive species compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of invasives facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to a native's performance. Figure \ref{fig:species} C. plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. All three exotic species have overall competitive effects, especially \textit{Arctotheca calendula} (ARCA) which is a weak facilitator but has a higher-than-median competitive effect on neighbours. \textit{Pentameris aroides} (PEAI) and \textit{Hypochaeris glabra} (HYPO) on the other hand are close to the community median for both facilitative and competitive effects. Neither \textit{P. aroides} nor \textit{H. glabra} are particularly competitive towards other species in the system, and even facilitate some species regardless of whether those are native or exotic. It appears instead that \textit{A. calendula} may be more of a threat to the native community than either of the other exotic species present. 
+
+    %\textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species overall have a competitive effect on the native-dominated community. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system, regardless of whether they are native or exotic. In this instance, \textit{P. aroides} is an exotic species that facilitates some native species.
 
 
     % \paragraph{}
@@ -382,7 +388,7 @@ To estimate pairwise interactions in diverse, horizontal systems such as those o
 \subsection{Conclusion}
 
     \paragraph{} 
-    There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions, but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. By applying our framework to a wildflower case study, we find that over-abundant species do not appear to self-regulate more strongly than rare species, contrary to expectations. We also identify species which have strong overall effects on the community, and an unusual case of an exotic grass which facilitates natives. Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
+    There is now a rich body of work describing the characteristics of food web, plant-pollinator and host-parasite interactions, but fewer network approaches focus on non-trophic interactions such as those occurring between plants \parencite{Ellison2019}. Here we present a novel framework which makes the process of inferring  interactions in horizontal systems easier, whilst allowing for many and multiple types (competitive and facilitative) of interactions. In turn, this allows the application of  network theory tools to the management of non-trophic systems, as well as to deepening our understanding of diversity, stability and other community-level properties which emerge from interactions. By applying our framework to a wildflower case study, we find that over-abundant species do not appear to self-regulate more strongly than rare species, contrary to expectations. We also identify species which have strong effects on their neighbours, and which exotic species may be more of a threat to the native community. Though we illustrate our study with one particular ecological dataset, the method presented here could be adapted for use on a wider array of  horizontal systems such as those found in microbial, neural, and social networks. 
    
 
 % \bibliography{../../../BibTex_files/03_Chapter3}
