author contributions and keywors - send to Daniel now!

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -72,11 +72,11 @@ Number of words - main text: 4904\\
 Number of references: 81\\
 
 \noindent
-\textbf{Keywords:} Species interactions, competition, facilitation, networks, population dynamics, non-trophic, ....  
+\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, non-trophic, interaction strength.  
 
 \section*{Author contributions}
 
-M.D.B. designed the methodology, carried out analyses and led the drafting of the manuscript. D.B.S. helped design the methodology and interpret analyses and critically revised the manuscript. T.E.M. led the field study and data collection. M.M.M. helped design the field study, collected data, contributed to the interpretation of analyses and critically revised the manuscript. [DOES THIS NEED TO CHANGE??]
+M.D.B. designed the methodology, carried out analyses and led the drafting of the manuscript. M.M.M. helped design the field study, collected data, contributed to the interpretation of analyses and critically revised the manuscript. T.E.M. led the field study and data collection. D.B.S. helped design the methodology, interpret analyses and critically revised the manuscript. 
 
 \section*{Data accessibility}
 
